feat: enable attach to debugger